tests/fixtures/invalid/chr_set.py
# Cannot call chr() with Set[int]
x = chr({1, 2, 3})
